# Polynomial

./: CMakeLists.txt
cmake/: BuildFlags.cmake  TestUtils.cmake
include/: complex_type.h  matrix.h  monomial.h  mp_fwd.h  polynomial.h
tests/: CMakeLists.txt  structs.h  test_matrix.cpp  test_monomial.cpp  test_polynomial.cpp
